// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 120x600·en renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Secure your Bitcoin"
  data-lang="en"
  data-size="120x600"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=b254cae9-d8b7-41e5-86e7-f42be98a4844&s1=b254cae9-d8b7-41e5-86e7-f42be98a4844&subid=b254cae9-d8b7-41e5-86e7-f42be98a4844&click_id=b254cae9-d8b7-41e5-86e7-f42be98a4844"
  rel="sponsored nofollow noopener"
  style="max-width: 120px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Secure your Bitcoin"
    height="600"
    src="https://affiliate.ledger.com/image/120/600/Default"
    style="aspect-ratio: 120 / 600;"
    width="120"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 120x600·tr renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Bitcoin'ini güvene al"
  data-lang="tr"
  data-size="120x600"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=3af69f84-86a5-44d9-b366-c937b3c87e53&s1=3af69f84-86a5-44d9-b366-c937b3c87e53&subid=3af69f84-86a5-44d9-b366-c937b3c87e53&click_id=3af69f84-86a5-44d9-b366-c937b3c87e53"
  rel="sponsored nofollow noopener"
  style="max-width: 120px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Bitcoin'ini güvene al"
    height="600"
    src="https://affiliate.ledger.com/image/120/600/Turkish"
    style="aspect-ratio: 120 / 600;"
    width="120"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 160x600·en renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Secure your Bitcoin"
  data-lang="en"
  data-size="160x600"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=69f60373-8f16-451f-b425-7f69fcadd4ec&s1=69f60373-8f16-451f-b425-7f69fcadd4ec&subid=69f60373-8f16-451f-b425-7f69fcadd4ec&click_id=69f60373-8f16-451f-b425-7f69fcadd4ec"
  rel="sponsored nofollow noopener"
  style="max-width: 160px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Secure your Bitcoin"
    height="600"
    src="https://affiliate.ledger.com/image/160/600/Default"
    style="aspect-ratio: 160 / 600;"
    width="160"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 160x600·tr renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Bitcoin'ini güvene al"
  data-lang="tr"
  data-size="160x600"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=278b51f9-a9a2-47d0-8f3e-cce30ae53d57&s1=278b51f9-a9a2-47d0-8f3e-cce30ae53d57&subid=278b51f9-a9a2-47d0-8f3e-cce30ae53d57&click_id=278b51f9-a9a2-47d0-8f3e-cce30ae53d57"
  rel="sponsored nofollow noopener"
  style="max-width: 160px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Bitcoin'ini güvene al"
    height="600"
    src="https://affiliate.ledger.com/image/160/600/Turkish"
    style="aspect-ratio: 160 / 600;"
    width="160"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 250x100·en renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Secure your Bitcoin"
  data-lang="en"
  data-size="250x100"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=b2eac662-e4f6-4157-8abc-55b2206687fd&s1=b2eac662-e4f6-4157-8abc-55b2206687fd&subid=b2eac662-e4f6-4157-8abc-55b2206687fd&click_id=b2eac662-e4f6-4157-8abc-55b2206687fd"
  rel="sponsored nofollow noopener"
  style="max-width: 250px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Secure your Bitcoin"
    height="100"
    src="https://affiliate.ledger.com/image/250/100/Default"
    style="aspect-ratio: 250 / 100;"
    width="250"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 250x100·tr renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Bitcoin'ini güvene al"
  data-lang="tr"
  data-size="250x100"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=eed1651e-ead6-4246-b24d-9e66b6b3a133&s1=eed1651e-ead6-4246-b24d-9e66b6b3a133&subid=eed1651e-ead6-4246-b24d-9e66b6b3a133&click_id=eed1651e-ead6-4246-b24d-9e66b6b3a133"
  rel="sponsored nofollow noopener"
  style="max-width: 250px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Bitcoin'ini güvene al"
    height="100"
    src="https://affiliate.ledger.com/image/250/100/Turkish"
    style="aspect-ratio: 250 / 100;"
    width="250"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 300x250·en renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Secure your Bitcoin"
  data-lang="en"
  data-size="300x250"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=a59d4755-1782-47db-ac88-05b27e8f1e17&s1=a59d4755-1782-47db-ac88-05b27e8f1e17&subid=a59d4755-1782-47db-ac88-05b27e8f1e17&click_id=a59d4755-1782-47db-ac88-05b27e8f1e17"
  rel="sponsored nofollow noopener"
  style="max-width: 300px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Secure your Bitcoin"
    height="250"
    src="https://affiliate.ledger.com/image/300/250/Default"
    style="aspect-ratio: 300 / 250;"
    width="300"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 300x250·tr renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Bitcoin'ini güvene al"
  data-lang="tr"
  data-size="300x250"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=5e68e718-e913-4ba7-b6e5-4322bb87306f&s1=5e68e718-e913-4ba7-b6e5-4322bb87306f&subid=5e68e718-e913-4ba7-b6e5-4322bb87306f&click_id=5e68e718-e913-4ba7-b6e5-4322bb87306f"
  rel="sponsored nofollow noopener"
  style="max-width: 300px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Bitcoin'ini güvene al"
    height="250"
    src="https://affiliate.ledger.com/image/300/250/Turkish"
    style="aspect-ratio: 300 / 250;"
    width="300"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 300x600·en renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Secure your Bitcoin"
  data-lang="en"
  data-size="300x600"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=7cbf3532-c2a0-4db9-9e85-cf5e77c4fbc7&s1=7cbf3532-c2a0-4db9-9e85-cf5e77c4fbc7&subid=7cbf3532-c2a0-4db9-9e85-cf5e77c4fbc7&click_id=7cbf3532-c2a0-4db9-9e85-cf5e77c4fbc7"
  rel="sponsored nofollow noopener"
  style="max-width: 300px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Secure your Bitcoin"
    height="600"
    src="https://affiliate.ledger.com/image/300/600/Default"
    style="aspect-ratio: 300 / 600;"
    width="300"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 300x600·tr renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Bitcoin'ini güvene al"
  data-lang="tr"
  data-size="300x600"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=266cd05c-8495-48c7-a2b3-3d74414028ec&s1=266cd05c-8495-48c7-a2b3-3d74414028ec&subid=266cd05c-8495-48c7-a2b3-3d74414028ec&click_id=266cd05c-8495-48c7-a2b3-3d74414028ec"
  rel="sponsored nofollow noopener"
  style="max-width: 300px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Bitcoin'ini güvene al"
    height="600"
    src="https://affiliate.ledger.com/image/300/600/Turkish"
    style="aspect-ratio: 300 / 600;"
    width="300"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 320x50·en renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Secure your Bitcoin"
  data-lang="en"
  data-size="320x50"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=c0847b65-5f88-4ac7-a6c6-3828e84d6395&s1=c0847b65-5f88-4ac7-a6c6-3828e84d6395&subid=c0847b65-5f88-4ac7-a6c6-3828e84d6395&click_id=c0847b65-5f88-4ac7-a6c6-3828e84d6395"
  rel="sponsored nofollow noopener"
  style="max-width: 320px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Secure your Bitcoin"
    height="50"
    src="https://affiliate.ledger.com/image/320/50/Default"
    style="aspect-ratio: 320 / 50;"
    width="320"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 320x50·tr renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Bitcoin'ini güvene al"
  data-lang="tr"
  data-size="320x50"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=b272d0fe-876a-4381-a390-ebeb87d30b51&s1=b272d0fe-876a-4381-a390-ebeb87d30b51&subid=b272d0fe-876a-4381-a390-ebeb87d30b51&click_id=b272d0fe-876a-4381-a390-ebeb87d30b51"
  rel="sponsored nofollow noopener"
  style="max-width: 320px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Bitcoin'ini güvene al"
    height="50"
    src="https://affiliate.ledger.com/image/320/50/Turkish"
    style="aspect-ratio: 320 / 50;"
    width="320"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 468x60·en renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Secure your Bitcoin"
  data-lang="en"
  data-size="468x60"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=aec624ba-21aa-4466-b8b8-3f0c245979d7&s1=aec624ba-21aa-4466-b8b8-3f0c245979d7&subid=aec624ba-21aa-4466-b8b8-3f0c245979d7&click_id=aec624ba-21aa-4466-b8b8-3f0c245979d7"
  rel="sponsored nofollow noopener"
  style="max-width: 468px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Secure your Bitcoin"
    height="60"
    src="https://affiliate.ledger.com/image/468/60/Default"
    style="aspect-ratio: 468 / 60;"
    width="468"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 468x60·tr renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Bitcoin'ini güvene al"
  data-lang="tr"
  data-size="468x60"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=0254eeaa-5935-48c8-b637-1146bcd23467&s1=0254eeaa-5935-48c8-b637-1146bcd23467&subid=0254eeaa-5935-48c8-b637-1146bcd23467&click_id=0254eeaa-5935-48c8-b637-1146bcd23467"
  rel="sponsored nofollow noopener"
  style="max-width: 468px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Bitcoin'ini güvene al"
    height="60"
    src="https://affiliate.ledger.com/image/468/60/Turkish"
    style="aspect-ratio: 468 / 60;"
    width="468"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 728x90·en renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Secure your Bitcoin"
  data-lang="en"
  data-size="728x90"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=4cd605de-75a2-48e1-b2d3-028cd4ec156e&s1=4cd605de-75a2-48e1-b2d3-028cd4ec156e&subid=4cd605de-75a2-48e1-b2d3-028cd4ec156e&click_id=4cd605de-75a2-48e1-b2d3-028cd4ec156e"
  rel="sponsored nofollow noopener"
  style="max-width: 728px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Secure your Bitcoin"
    height="90"
    src="https://affiliate.ledger.com/image/728/90/Default"
    style="aspect-ratio: 728 / 90;"
    width="728"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 728x90·tr renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Bitcoin'ini güvene al"
  data-lang="tr"
  data-size="728x90"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=1a447284-cef5-4469-9f39-165077bceb59&s1=1a447284-cef5-4469-9f39-165077bceb59&subid=1a447284-cef5-4469-9f39-165077bceb59&click_id=1a447284-cef5-4469-9f39-165077bceb59"
  rel="sponsored nofollow noopener"
  style="max-width: 728px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Bitcoin'ini güvene al"
    height="90"
    src="https://affiliate.ledger.com/image/728/90/Turkish"
    style="aspect-ratio: 728 / 90;"
    width="728"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 850x420·en renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Secure your Bitcoin"
  data-lang="en"
  data-size="850x420"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=acb3e4fa-c8d4-4af9-9b85-be5a9bada01d&s1=acb3e4fa-c8d4-4af9-9b85-be5a9bada01d&subid=acb3e4fa-c8d4-4af9-9b85-be5a9bada01d&click_id=acb3e4fa-c8d4-4af9-9b85-be5a9bada01d"
  rel="sponsored nofollow noopener"
  style="max-width: 850px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Secure your Bitcoin"
    height="420"
    src="https://affiliate.ledger.com/image/850/420/Default"
    style="aspect-ratio: 850 / 420;"
    width="850"
  />
</a>
`;

exports[`Ledger banners · full visual regression matrix (9 sizes × 2 langs) > banner 850x420·tr renders with correct size, alt, src, and tracked href 1`] = `
<a
  aria-label="Ledger Nano S Plus — Bitcoin'ini güvene al"
  data-lang="tr"
  data-size="850x420"
  href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=8c4e8e87cac7&utm_source=retirement&utm_medium=affiliate&utm_campaign=ledger&utm_content=pre-footer&aff_sid=retirement__pre-footer&sub1=3c136efe-b417-402d-b634-a73eb8f118c1&s1=3c136efe-b417-402d-b634-a73eb8f118c1&subid=3c136efe-b417-402d-b634-a73eb8f118c1&click_id=3c136efe-b417-402d-b634-a73eb8f118c1"
  rel="sponsored nofollow noopener"
  style="max-width: 850px;"
  target="_blank"
>
  <img
    alt="Ledger Nano S Plus — Bitcoin'ini güvene al"
    height="420"
    src="https://affiliate.ledger.com/image/850/420/Turkish"
    style="aspect-ratio: 850 / 420;"
    width="850"
  />
</a>
`;
